# TrixelServiceBridges

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
example_configuration/synthetic_bridge/: config_diurnal_approximation.toml  config_diurnal_approximation_bad_day_time_and_impact_noise.toml  config_diurnal_approximation_bad_dropout.toml  config_diurnal_approximation_bad_keep_value.toml  config_diurnal_approximation_bad_low_update_interval.toml
src/trixelservicebridges/: __init__.py  logging_helper.py
src/trixelservicebridges/synthetic_bridge/: __main__.py  base_simulation_client.py  blank_client.py  config_schema.py  simulation_class_lookup.py  simulation_manager.py
src/trixelservicebridges/synthetic_bridge/simulation_clients/: blank_client.py  configuration_value_sampler.py  coordinate_gradient_client.py  diurnal_approximation_client.py  random_base_client.py  skewed_client.py
